--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 
 <body>
@@ -63,11 +63,11 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">Roulette1</h5>
+                <h5 class="black-text">Roulette1</h5>
                 <p class="grey-text text-lighten-4">36-1 Inside-Payout Roulette, instant payouts, supports Bitcoin</p>
             </div>
             <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+                <h5 class="black-text">Links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="https://www.facebook.com">Contact</a></li>
                     <li><a class="grey-text text-lighten-3" href="rules.html">Terms and Conditions</a></li>
