--- a/public/rules.html
+++ b/public/rules.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 
 <body>
@@ -26,13 +26,15 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
+                <div class="card-panel darken-1">
+                    <div class="card-content black-text">
                         <span class="card-title"><u>About</u></span>
                         <ol>
+                        <li>Create an account</li>
                         <li>Deposit BTC into account to play</li>
-                        <li>Place bets by clicking roulette board (Inside bets or Outside bets)</li>
-                        <li>Spin, match, and win!</li>
+                        <li>Select bet amount above</li>
+                        <li>Place bets on roulette board</li>
+                        <li>Spin to win!</li>
                         </ol>
                     </div>
                 </div>
@@ -42,15 +44,17 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text" id="payoutRules">
-                        <span class="card-title"><h3><u>Payouts</u></h3></span>
-                        <h5><u>1 to 1</u></h5>
-                        <p>1-18, 19-36, Even, Odd, Red, Black</p>
-                        <h5><u>2 to 1</u></h5>
-                        <p>1st Twelve, 2nd Twelve, 3rd Twelve, Top-Row, Middle-Row, Bottom-Row</p>
-                        <h5><u>36 to 1</u></h5>
-                        <p>1-36, 0, 00</p>
+                <div class="card-panel darken-1">
+                    <div class="card-content black-text" id="payoutRules">
+                        <center>
+                            <span class="card-title"><h3><u>Payouts</u></h3></span>
+                            <h5>1 to 1</h5>
+                            <p>1-18, 19-36, Even, Odd, Red, Black</p>
+                            <h5>2 to 1</h5>
+                            <p>1st Twelve, 2nd Twelve, 3rd Twelve, Top-Row, Middle-Row, Bottom-Row</p>
+                            <h5>36 to 1</h5>
+                            <p>1-36, 0, 00</p>
+                        </center>
                     </div>
                 </div>
             </div>
@@ -59,8 +63,8 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
+                <div class="card-panel darken-1">
+                    <div class="card-content black-text">
                         <span class="card-title"><u>Terms and Conditions</u></span>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam erat, molestie eget risus ut, dapibus pellentesque augue. Mauris aliquet turpis metus, vitae tincidunt sapien venenatis vel. Nullam ac ligula sit amet quam feugiat faucibus quis ac felis. Pellentesque vel porttitor nisi. Aenean ornare imperdiet velit, quis dapibus ante efficitur ut. Vestibulum gravida erat vitae dapibus sollicitudin. Suspendisse at diam quis elit auctor mollis. Nam iaculis volutpat velit at rhoncus. Nam fringilla velit eget urna iaculis, sed ullamcorper sem tristique. Sed erat diam, consequat id nisl quis, posuere hendrerit orci. Aliquam finibus bibendum egestas. Proin dignissim neque sem, eget posuere nunc ornare eget. Nullam non posuere orci. In ex mauris, scelerisque ac fermentum non, tristique nec nunc. Integer scelerisque, nulla id dignissim rutrum, est justo molestie mauris, non semper purus tortor a elit. Aenean sagittis elit nec risus maximus, vulputate iaculis magna mattis.</p>
                     </div>
