--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <button id="spin" class="orange darken-3 waves-effect waves-light btn btn-large col s4"><b> SPIN </b></button>
                     <div class="col s1">
                     </div>
-                    <button onclick="setInterval(spinFunction, 500)" id="autoSpin" class="green darken-3 waves-effect waves-light btn btn-large col s3"><b> AUTO </b></button>
+                    <button id="autoSpin" class="green darken-3 waves-effect waves-light btn btn-large col s3"><b> AUTO </b></button>
                     <div class="col s1">
                     </div>
                     <button id="stopAuto" class="red accent-4 waves-effect waves-light btn btn-large col s3"><b> STOP </b></button>
@@ -163,20 +163,24 @@
             </div>
             <div class="col s6">
                 <div class="row">
-                    <div id="currentBetPanel" class="card-panel large col s12">
+                    <div id="currentBetPanel" class="card-panel large col s5">
                         <div class="row">
-                            <h5 class="col s10">Current Bets</h5>
-                            <button id="clear" class="btn-primary waves-effect btn col s2">clear</button>
+                            <h5 class="col s8">Bet(s)</h5>
+                            <button id="clear" class="btn-primary waves-effect btn col s4">clear</button>
                             <hr class="col s12"></hr>
                             <h5 class="col s12"><a id="currentBets"></a></h5>
                         </div>
                     </div>
-                    <div id="spinHistory" class="card-panel large col s12">
+                    <div class="col s2">
+                    </div>
+                    <div id="spinHistory" class="card-panel large col s5">
                         <div class="row">
-                            <h5 class="col s10">Previous Spins</h5>
-                            <button id="clearHistory" class="btn-primary waves-effect btn col s2">clear</button>
+                            <h5 class="col s8">History</h5>
+                            <button id="clearHistory" class="btn-primary waves-effect btn col s4">clear</button>
                         <hr class="col s12"></hr>
-                        <h5 class="col s12"><a id="spinDisplay"></a></h5>
+                        <div class="col s2">
+                        </div>
+                        <h5 class="col s8"><a id="spinDisplay"></a></h5>
                         </div>
                     </div>
                 </div>
