--- a/public/account.html
+++ b/public/account.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-	    <div class="black nav-wrapper">
+	    <div class="teal nav-wrapper">
 	        <a href="#" class="brand-logo center">Roulette1</a>
 	        <ul id="nav-mobile" class="left hide-on-med-and-down">
 	            <li><a href="../index.html">Home</a></li>
@@ -24,12 +24,16 @@
 	    </div>
 	</nav>
     <center>
-        <h2 class="white-text"><b>Welcome, </b></h2>
-    <div id="score" class="card panel">
+        <div class="row">
+            <h2 class="black-text">Your Balance</h2>
+            <hr/>
+        </div>
+        <div class="row">
             <h3>
-                Balance: <a id="balance">10</a> BTC
+                <a class="green-text" id="balance">100</a> ฿ 
             </h3>
-    </div>
+            <hr/>
+        </div>
     </center>
     <div class="section"></div>
     <div class="container">
@@ -39,6 +43,29 @@
             <button class="waves-effect waves-light btn col s5">Withdraw</button>
         </div>
     </div>
+    <footer class="teal card-panel z-depth-4 page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Roulette</h5>
+                    <p class="grey-text text-lighten-4">36-1 Instant-Payout Roulette</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com">Contact</a></li>
+                        <li><a class="grey-text text-lighten-3" href="public/rules.html">Terms and Conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © David Zhu 2017 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
