--- a/public/login.html
+++ b/public/login.html
@@ -13,8 +13,8 @@
 
 <body>
 	<nav>
-	    <div class="black nav-wrapper">
-	        <a href="#" class="brand-logo center">Roulette1</a>
+	    <div class="teal nav-wrapper">
+	        <a href="#" class="brand-logo center">Roulette</a>
 	        <ul id="nav-mobile" class="left hide-on-med-and-down">
 	            <li><a href="../index.html">Home</a></li>
 	            <li><a href="account.html">Account</a></li>
@@ -24,9 +24,9 @@
 	</nav>
 <center>
     <div class="section"></div>
-    <h2 class="white-text"><b>Log In...</b></h2>
+    <h2 class="teal-text"><b>Log In...</b></h2>
     <div class="container">
-        <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+        <div class="z-depth-4 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
             <form class="col s12" method="post">
                 <div class='row'>
                     <div class='col s12'>
@@ -59,25 +59,25 @@
     <a class="btn btn-primary black" href="#!">Create account</a>
     <div class="section"></div>
 </center>
-<footer class="black page-footer">
+<footer class="teal card-panel z-depth-4 page-footer">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="black-text">Roulette1</h5>
-                <p class="grey-text text-lighten-4">36-1 Inside-Payout Roulette, instant payouts, supports Bitcoin</p>
+                <h5 class="white-text">Roulette</h5>
+                <p class="grey-text text-lighten-4">36-1 Instant-Payout Roulette</p>
             </div>
             <div class="col l4 offset-l2 s12">
-                <h5 class="black-text">Links</h5>
+                <h5 class="white-text">Links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="https://www.facebook.com">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="rules.html">Terms and Conditions</a></li>
+                    <li><a class="grey-text text-lighten-3" href="public/rules.html">Terms and Conditions</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
-            © 2017 Copyright Text
+            © David Zhu 2017 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
     </div>
