--- a/public/rules.html
+++ b/public/rules.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-	    <div class="black nav-wrapper">
+	    <div class="teal nav-wrapper">
 	        <a href="#" class="brand-logo center">Roulette1</a>
 	        <ul id="nav-mobile" class="left hide-on-med-and-down">
 	            <li><a href="../index.html">Home</a></li>
@@ -72,25 +72,25 @@
             </div>
         </div>
     </div>
-    <footer class="black page-footer">
+    <footer class="teal card-panel z-depth-4 page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Roulette1</h5>
-                    <p class="grey-text text-lighten-4">36-1 Inside-Payout Roulette, instant payouts, supports Bitcoin</p>
+                    <h5 class="white-text">Roulette</h5>
+                    <p class="grey-text text-lighten-4">36-1 Instant-Payout Roulette</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="https://www.facebook.com">Contact</a></li>
-                        <li><a class="grey-text text-lighten-3" href="rules.html">Terms and Conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" href="public/rules.html">Terms and Conditions</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2017 Copyright Text
+                © David Zhu 2017 Copyright Text
                 <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
